2005-05-29  Richard Henderson  <rth@redhat.com>

	* emulparams/elf64alpha.sh (PLT): New.
	(TEXT_PLT): New.
	* emultempl/alphaelf.em (disable_relaxation): New.
	(limit_32bit): Rename from elf64alpha_32bit; update all users.
	(elf64_alpha_use_secureplt): Declare.
	(bfd_elf64_alpha_vec, bfd_elf64_alpha_freebsd_vec): Declare.
	(alpha_after_open): New.
	(alpha_before_allocation): New.
	(OPTION_NO_RELAX, OPTION_SECUREPLT, OPTION_NO_SECUREPLT): New.
	(PARSE_AND_LIST_LONGOPTS): Include them.
	(PARSE_AND_LIST_OPTIONS): Likewise.
	(PARSE_AND_LIST_ARGS_CASES): Likewise.
	(LDEMUL_AFTER_OPEN, LDEMUL_BEFORE_ALLOCATION): New.
	* scripttempl/elf.sc (TEXT_PLT): New.
	(PLT): Use it.

2005-05-27  Andreas Schwab  <schwab@suse.de>

	* configure.host (HOSTING_LIBS): Add libunwind.a if it exists.

2005-05-24  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc32elf.em (after_allocation): Don't call
	ppc_elf_set_sdata_syms when relocatable.

2005-05-21  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (ld.1): Revert the last 2 changes.
	(info-recursive): Depend on ld.1.
	* Makefile.in: Regenerated.

2005-05-21  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (ld.1): Depend on "info" instead of
	"configdoc.texi ldver.texi".
	* Makefile.in: Regenerated.

2005-05-21  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (ld.1): Depend on "info".
	* Makefile.in: Regenerated.

2005-05-19  Zack Weinberg  <zack@codesourcery.com>

	* Makefile.am: Have 'all' depend on 'info' and 'ld.1'.
	* Makefile.in: Regenerate.

2005-05-17  Zack Weinberg  <zack@codesourcery.com>

	* ld-arm/mixed-app.d: Adjust expected disassembly a little.

2005-05-17  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am (ldver.texi): Don't use $<.
	* Makefile.in: Regenerated.

2005-05-17  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am (AM_MAKEINFOFLAGS, TEXI2DVI): Explicitly include
	$(srcdir) before $(BFDDIR)/doc.
	* Makefile.in: Regenerated.

2005-05-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR 797